--- a/index.html
+++ b/index.html
@@ -1,44 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>StartUp</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<title>Linear Gradient</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-       
-    <header class="startup text-white text-center d-flex">
-    	<div class="container my-auto">
-    		<div class="row mx-auto">
-    			<div class="col-lg-12">
-                  <h1><strong>THE BIGGEST STARTUP OF THE YEAR</strong></h1>
-                  <hr>
-                </div>
-                <div class="col-lg-12">
-                	<!-- Begin MailChimp Signup Form -->
-					<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-					<style type="text/css">
-						#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
-						/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-						   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-					</style>
-					<div id="mc_embed_signup">
-					<form action="https://brooo.us17.list-manage.com/subscribe/post?u=d05d12f4b4fa717180c306157&amp;id=b75f437de7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-					    <div id="mc_embed_signup_scroll">
-						<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-					    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d05d12f4b4fa717180c306157_b75f437de7" tabindex="-1" value=""></div>
-					    <div class="clear"><input class="btn btn-primary btn-xl" type="submit" value="Find Out More" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-					    </div>
-					</form>
-					</div>
-                   <!--End mc_embed_signup-->
+	<div>
+     <h1><strong>Finally Done :)</strong></h1>
+     <h2>Background Generator</h2>
+     <input type="color" name="color1" value="#00ffaa">
+     <input type="color" name="color2" value="#aabcff">
+     <h3>current background is Linear Gradient
+        <span id="c1"></span> and <span id="c2"></span>
+      </h3>
+    </div>
 
-
-                	<!-- <button type="button" ></button> -->
-                </div>          
-    		</div>
-    	</div>
-    </header>
-
+    <div>
+    	
+    </div>    
+      <script type="text/javascript" src="script.js" ></script>
 </body>
 </html>
